made the app score fixed width so it wouldn't shift everything while animating to different scores

--- a/assets/css/sass/_app.sass
+++ b/assets/css/sass/_app.sass
@@ -114,6 +114,7 @@
   font-size: 1em
   line-height: 1.2em
   padding: 0 .75em 0 0
+  width: 2.625em
 
 .contrast-app-ratio
   color: $color-dark
